# kv-cli

./: .gitignore  CMakeLists.txt  README.md  compile.sh  plan.md
.github/workflows/: c-cpp.yml
include/: constants.h  kv_cli.h  kv_controller.h  kv_parser.h
include/utilities/: hash_table.h  linked_list.h  logger.h  string_conversion.h
lib/kv_store/: CMakeLists.txt
lib/linked-list/: CMakeLists.txt
lib/logger/: CMakeLists.txt  logger.c
lib/logger/include/: constants.h
src/: kv_cli.c  kv_controller.c  kv_parser.c  main.c
src/parser/: kv_parser.c
src/utilities/: hash_table.c  linked_list.c  logger.c  string_conversion.c
test/: test_commands.txt  test_kv_cli.c
test/data/: test.db  test_1.db  test_2.db  test_3.db
test/include/: test_kv_cli.h
tests/: test_commands.txt
tests/data/: test.db
